--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,10 @@
     "advm_basic_op.h": "c",
     "cmath": "c",
     "cstdlib": "c",
-    "type_traits": "c"
+    "type_traits": "c",
+    "unity_fixture.h": "c",
+    "adv_math_application.h": "c",
+    "advm_gcd_lcm.h": "c"
   },
   "cSpell.words": [
     "advm"
