feat: add cli + seperate makefile
[optional body]

[optional footer]

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,7 +20,7 @@
           "ignoreFailures": true
         }
       ],
-      "preLaunchTask": "build project"
+      "preLaunchTask": "build test project"
     }
   ]
 }
