--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,11 +16,21 @@
     "type_traits": "c",
     "unity_fixture.h": "c",
     "adv_math_application.h": "c",
-    "advm_gcd_lcm.h": "c"
+    "advm_gcd_lcm.h": "c",
+    "advm_prime.h": "c",
+    "advm_config.h": "c",
+    "advm_cli.h": "c",
+    "advm_modular.h": "c",
+    "string.h": "c",
+    "unity_memory.h": "c",
+    "compare": "c",
+    "advm_func_register.h": "c",
+    "typeinfo": "c"
   },
   "cSpell.words": [
     "advm"
   ],
   "C_Cpp.default.compilerPath": "C:/msys64/mingw64/bin/gcc.exe",
-  "cmake.ignoreCMakeListsMissing": true
+  "cmake.ignoreCMakeListsMissing": true,
+  "C_Cpp.errorSquiggles": "enabled"
 }
