update: Add Bubble sort + test
[optional body]

[optional footer]

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,7 +25,9 @@
     "unity_memory.h": "c",
     "compare": "c",
     "advm_func_register.h": "c",
-    "typeinfo": "c"
+    "typeinfo": "c",
+    "advm_sort.h": "c",
+    "stdio.h": "c"
   },
   "cSpell.words": [
     "advm"
