update: Python using c dll

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -27,7 +27,7 @@
       "type": "debugpy",
       "request": "launch",
       "program": "${workspaceFolder}/python/main.py",
-      "console": "integratedTerminal"
+      "console": "internalConsole"
     }
   ]
 }
